feat(views,index.html): complete newlisting view to register the new listing in the database. pass these informations to the index views. modify index.html to add the listings.

--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -3,5 +3,14 @@
 {% block body %}
     <h2>Active Listings</h2>
 
-    TODO
+    {% for listing in listings %}
+    <div>
+        <p>{{listing.title}}</p>
+        <p>{{listing.description}}</p>
+        <p>{{listing.price}}</p>
+        <p>{{listing.category}}</p>
+        <p>{{listing.created_at}}</p>
+        <img src="{{listing.url}}" alt="Image de la vente">
+    </div>
+    {% endfor %}
 {% endblock %}
