feat(views, url, html): create the view, the url and the html associated with a given listing.

--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -4,13 +4,13 @@
     <h2>Active Listings</h2>
 
     {% for listing in listings %}
-    <div>
+    <a href="">
         <p>{{listing.title}}</p>
         <p>{{listing.description}}</p>
-        <p>{{listing.price}}</p>
+        <p>{{listing.price}} eur</p>
         <p>{{listing.category}}</p>
         <p>{{listing.created_at}}</p>
         <img src="{{listing.url}}" alt="Image de la vente">
-    </div>
+    </a>
     {% endfor %}
 {% endblock %}
