test(models): test the registration of a new listing in the database.

--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -4,7 +4,7 @@
     <h2>Active Listings</h2>
 
     {% for listing in listings %}
-    <a href="">
+    <a href="/listing/{{listing.id}}">
         <p>{{listing.title}}</p>
         <p>{{listing.description}}</p>
         <p>{{listing.price}} eur</p>
