--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -1,4 +1,4 @@
-{% extends "auctions/layout.html"}
+{% extends "auctions/layout.html" %}
 
 {% block body %}
     <h1>Listing : {{listing.title}}</h1>
