--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -2,6 +2,9 @@
 
 {% block body %}
     <h1>Listing : {{listing.title}}</h1>
+    <form action="">
+        <input type="submit" value="Add to my watchlist">
+    </form>
     <img src="{{listing.url}}" alt="image of the listing">
     <p>{{listing.description}}</p>
     <h2>{{listing.price}}</h2>
