--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -2,8 +2,12 @@
 
 {% block body %}
     <h1>Listing : {{listing.title}}</h1>
-    <form action="/addtowatchlist/listing.id" method="get">
-        <input type="submit" value="Add to my watchlist">
+    <form action="/toggletowatchlist/{{listing.id}}" method="get">
+        {% if listing.followed %}
+            <input type="submit" value="Remove from my watchlist">
+        {% else %}
+            <input type="submit" value="Add to my watchlist">
+        {% endif %}
     </form>
     <img src="{{listing.url}}" alt="image of the listing">
     <p>{{listing.description}}</p>
