--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -2,13 +2,15 @@
 
 {% block body %}
     <h1>Listing : {{listing.title}}</h1>
-    <form action="/toggletowatchlist/{{listing.id}}" method="get">
-        {% if listing.followed %}
-            <input type="submit" value="Remove from my watchlist">
-        {% else %}
-            <input type="submit" value="Add to my watchlist">
-        {% endif %}
-    </form>
+    {% if user.is_authenticated %}
+        <form action="/toggletowatchlist/{{listing.id}}" method="get">
+            {% if listing.followed %}
+                <input type="submit" value="Remove from my watchlist">
+            {% else %}
+                <input type="submit" value="Add to my watchlist">
+            {% endif %}
+        </form>
+    {% endif %}
     <img src="{{listing.url}}" alt="image of the listing">
     <p>{{listing.description}}</p>
     <h2>{{listing.price}}</h2>
