--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -14,11 +14,14 @@
     <img src="{{listing.url}}" alt="image of the listing">
     <p>{{listing.description}}</p>
     <h2>{{listing.price}}</h2>
-    <p>There are NUMBER bids.</p>
-    <form action="">
-        <input type="text" name="bid" id="bid">
-        <input type="submit" placeholder="Place bid">
-    </form>
+    {% if user.is_authenticated %}
+        <p>There are NUMBER bids.</p>
+        <form action="/listing/{{listing.id}}/submitbid" method="post">
+            {% csrf_token %}
+            <input type="text" name="bid" id="bid">
+            <input type="submit" placeholder="Place bid">
+        </form>
+    {% endif %}
     <h2>Details</h2>
     <ul>
         <li>Listed by : USER</li>
