feat(views,html): pass to listing.html the information telling if the user is the creator of the listing and add a submit input if it is the case.

--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -34,5 +34,9 @@
         <li>Listed by : USER</li>
         <li>Category : {{listing.category}}</li>
     </ul>
-
+    {% if useriscreator %}
+        <form action="">
+            <input type="submit">
+        </form>
+    {% endif %}
 {% endblock %}
