--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -35,7 +35,7 @@
         <li>Category : {{listing.category}}</li>
     </ul>
     {% if useriscreator %}
-        <form action="">
+        <form action="/listing/{{listing.id}}/deletelisting" method="get">
             <input type="submit">
         </form>
     {% endif %}
