--- a/auctions/templates/auctions/newlisting.html
+++ b/auctions/templates/auctions/newlisting.html
@@ -1,4 +1,9 @@
 {% extends "auctions/layout.html" %}
+{% load static %}
+
+{% block css%}
+    <link rel="stylesheet" href="{% static 'auctions/newlisting.css' %}">
+{% endblock%}
 
 {% block body %}
     <form action="/newlisting" method="post">
