--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -1,16 +1,30 @@
 {% extends "auctions/layout.html" %}
+{%load static%}
+
+{% block css %}
+    <link rel="stylesheet" href="{% static 'auctions/listing.css'%}">
+{% endblock %}
 
 {% block body %}
     <h2>Active Listings</h2>
 
-    {% for listing in listings %}
-    <a href="/listing/{{listing.id}}">
-        <p>{{listing.title}}</p>
-        <p>{{listing.description}}</p>
-        <p>{{listing.price}} eur</p>
-        <p>{{listing.category}}</p>
-        <p>{{listing.created_at}}</p>
-        <img src="{{listing.url}}" alt="Image de la vente">
+    {% for listing in listings %} 
+    <a href="/listing/{{listing.id}}" class="listing">
+        <div class="title-price">            
+            <p>{{listing.title}}</p>
+            <p>{{listing.price}} eur</p>
+        </div>
+        <div class="photo-additional-infos">
+            <div class="additional-infos">
+                <p><strong>Description:</strong> {{listing.description}}</p>
+                <p><strong>Category:</strong> {{listing.category}}</p>
+                <p><strong>Created at:</strong> {{listing.created_at}}</p>
+                <p><strong>Creator :</strong> {{listing.creator}}</p>
+            </div>
+            {% if listing.url %}
+                <img src="{{listing.url}}" alt="Image de la vente">
+            {% endif %}
+        </div>
     </a>
     {% endfor %}
 {% endblock %}
