feat(html): add a form for comments in listing.html

--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -56,6 +56,13 @@
                 {% endif %}
             </div>
         </div>
+        <footer>
+            <form action="" method="post">
+                {% csrf_token%}
+                <textarea name="comment" placeholder="Enter your comment here"></textarea>
+                <input type="submit" value="Send">
+            </form>
+        </footer>
     {% elif useriswinner %}
         <p> Congratulations! You won this auction.</p>
     {% else %}
