feat, test(views, url, models): create the view savecomment, the associated url and the model Comments

--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -57,9 +57,9 @@
             </div>
         </div>
         <footer>
-            <form action="" method="post">
+            <form action="/listing/{listing.id}/savecomment" method="post">
                 {% csrf_token%}
-                <textarea name="comment" placeholder="Enter your comment here"></textarea>
+                <textarea name="text" placeholder="Enter your comment here"></textarea>
                 <input type="submit" value="Send">
             </form>
         </footer>
