--- a/auctions/static/auctions/bidform.css
+++ b/auctions/static/auctions/bidform.css
@@ -37,6 +37,10 @@
   color: gray;
 }
 
+footer {
+  width: 80%;
+  margin: 20px auto;
+}
 .form {
   display: flex;
   justify-content: space-between;
