feat(urls, views, html): create the page html, url, view of all listings of a given category.

--- a/auctions/templates/auctions/categories.html
+++ b/auctions/templates/auctions/categories.html
@@ -1,15 +1,11 @@
 {% extends "auctions/layout.html" %}
 {%load static%}
 
-{% block css %}
-    <!--<link rel="stylesheet" href="{% static 'auctions/listing.css'%}">-->
-{% endblock %}
-
 {% block body %}
      <h2>Categories of listings</h2>
      <ul>
         {% for category in categories%}
-            <li><a href="">{{category}}</a></li>
+            <li><a href="/listing/{{category}}">{{category}}</a></li>
         {% endfor %}
      </ul>
 {% endblock %}
