--- a/auctions/templates/auctions/categories.html
+++ b/auctions/templates/auctions/categories.html
@@ -1,11 +1,15 @@
 {% extends "auctions/layout.html" %}
 {%load static%}
 
+{% block css %}
+    <link rel="stylesheet" href="{% static 'auctions/category.css'%}">
+{% endblock %}
+
 {% block body %}
      <h2>Categories of listings</h2>
-     <ul>
+     <ul class="categories">
         {% for category in categories%}
-            <li><a href="/listing/{{category}}">{{category}}</a></li>
+            <li><a href="/listing/{{category}}" class="category">{{category}}</a></li>
         {% endfor %}
      </ul>
 {% endblock %}
